--- a/index.html
+++ b/index.html
@@ -41,3 +41,6 @@
 <li><a href=”Produtos.html”>Produtos</a></li>
 <li><a href=”contato.html”>Contato</a></li>
 <li><a href=”https://www.google.com.br/”>Contato</a></li>
+<title>Produtos - Barbearia Alura</title>
+<link rel=”stylesheet” href=”reset.css”>
+<link rel=”stylesheet” href=”Produtos.css”>
