--- a/index.html
+++ b/index.html
@@ -44,3 +44,15 @@
 <title>Produtos - Barbearia Alura</title>
 <link rel=”stylesheet” href=”reset.css”>
 <link rel=”stylesheet” href=”Produtos.css”>
+<header>
+<div class=”caixa”>
+<image src=”logo.png”></image>
+<nav>
+<ul>
+<li><a href=”index.html”>Home</a></li>
+<li><a href=”Produtos.html”>Produtos</a></li>
+<li><a href=”contato.html”>Contato</a></li>
+</ul>
+</nav>
+</div>
+</header>
