--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </body>
 <header>
 <image src =”logo.png”></image>
-</header>
+</header><li><a href=”https://www.google.com.br/”>Contato</a></li>
 <image src =”logo.png”></image>
 <ul>
 <li></li>
@@ -41,137 +41,3 @@
 <li><a href=”Produtos.html”>Produtos</a></li>
 <li><a href=”contato.html”>Contato</a></li>
 <li><a href=”https://www.google.com.br/”>Contato</a></li>
-<title>Produtos - Barbearia Alura</title>
-<link rel=”stylesheet” href=”reset.css”>
-<link rel=”stylesheet” href=”Produtos.css”>
-<header>
-<div class=”caixa”>
-<image src=”logo.png”></image>
-<nav>
-<ul>
-<li><a href=”index.html”>Home</a></li>
-<li><a href=”Produtos.html”>Produtos</a></li>
-<li><a href=”contato.html”>Contato</a></li>
-</ul>
-</nav>
-</div>
-</header>
-<body>
-<header>
-<div class=”caixa”>
-<image src=”logo.png”></image>
-<nav>
-<ul>
-<li><a href=”index.html”>Home</a></li>
-<li><a href=”Produtos.html”>Produtos</a></li>
-<li><a href=”contato.html”>Contato</a></li>
-</ul>
-</nav>
-</div>
-</header>
-</body>
-</header>
-<main>
-</main>
-</body>
-<main>
-<ul>
-<li>Cabelo</li>
-<li>Barba</li>
-<li>Cabelo + Barba</li>
-</ul>
-</main>
-<ul>
-<li>
-<h2>Cabelo</h2>
-</li>
-<li>
-<h2>Barba</h2>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-</li>
-</ul>
-<li>
-<h2>Cabelo</h2>
-<img src=”cabelo.jpg”>
-</li>
-<li>
-<h2>Barba</h2>
-<img src=”barba.jpg”>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-<img src=”cabelo+barba.jpg”>
-</li>
-<li>
-
-<h2>Cabelo</h2>
-<img src=”cabelo.jpg”>
-<p>Na tesoura ou máquina, como o cliente preferir</p>
-</li>
-<li>
-<h2>Barba</h2>
-<img src=”barba.jpg”>
-<p>Corte e desenho profissional de barba</p>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-<img src=”cabelo+barba.jpg”>
-<p>Pacote completo de cabelo e barba</p>
-</li>
-<li>
-
-<h2>Cabelo</h2>
-<img src=”cabelo.jpg”>
-<p>Na tesoura ou máquina, como o cliente preferir</p>
-<p>R$ 25,00</p>
-</li>
-<li>
-<h2>Barba</h2>
-<img src=”barba.jpg”>
-<p>Corte e desenho profissional de barba</p>
-<p>R$ 18,00</p>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-<img src=”cabelo+barba.jpg”>
-<p>Pacote completo de cabelo e barba</p>
-<p>R$ 35,00</p>
-</li>
-<main>
-<ul class=”produtos”>
-<li>
-<p class=”produto-preco”>R$ 25,00</p>
-</li>
-<li>
-<h2>Barba</h2>
-<img src=”barba.jpg”>
-<p>Corte e desenho profissional de barba</p>
-<p class=”produto-preco”>R$ 18,00</p>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-<img src=”cabelo+barba.jpg”>
-<p>Pacote completo de cabelo e barba</p>
-<p class=”produto-preco”>R$ 35,00</p>
-</li>
-<li>
-
-<h2>Cabelo</h2>
-<img src=”cabelo.jpg”>
-<p class=”produto-descricao”>Na tesoura ou máquina, como o cliente preferir</p>
-<p class=”produto-preco”>R$ 25,00</p>
-</li>
-<li>
-<h2>Barba</h2>
-<img src=”barba.jpg”>
-<p class=”produto-descricao”>Corte e desenho profissional de barba</p>
-<p class=”produto-preco”>R$ 18,00</p>
-</li>
-<li>
-<h2>Cabelo + Barba</h2>
-<img src=”cabelo+barba.jpg”>
-<p class=”produto-descricao”>Pacote completo de cabelo e barba</p>
-<p class=”produto-preco”>R$ 35,00</p>
-</li>
