--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 <li></li>
 </ul>
 <ul>
-
 <li>Home</li>
 <li>Produtos</li>
 <li>Contato</li>
@@ -41,3 +40,10 @@
 <li><a href=”Produtos.html”>Produtos</a></li>
 <li><a href=”contato.html”>Contato</a></li>
 <li><a href=”https://www.google.com.br/”>Contato</a></li>
+<nav>
+<ul>
+<li><a href=”index.html”>Home</a></li>
+<li><a href=”Produtos.html”>Produtos</a></li>
+<li><a href=”contato.html”>Contato</a></li>
+</ul>
+</nav>
