--- a/index.html
+++ b/index.html
@@ -47,3 +47,6 @@
 <li><a href=”contato.html”>Contato</a></li>
 </ul>
 </nav>
+<title>Produtos - Barbearia Alura</title>
+<link rel=”stylesheet” href=”reset.css”>
+<link rel=”stylesheet” href=”Produtos.css”>
