--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<header>
 			<h1 class="titulo-principal">Barbearia Alura</h1>
 		</header>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="barba.png">
+		<img id="banner" src="barba.png">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 	 
